html css done. Fixed align center in header.

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -1,2 +1,6 @@
+// orange
 $orange: rgb(255, 102, 0);
+
+// gray
 $background-gray: rgb(246, 246, 239);
+$text-gray: #828282;
